<resources>
    <string name="app_name">Qta</string>
    <string name="descripcion_imagen">Descripcion de la imagen</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="dos_palabras">Dos palabras</string>
    <string name="dos_palabras_des">Te voy a ayudar a solucionar el problema de las 2 palabras.</string>
    <string name="dos_palabras_list1">1. Ingresa una cadena de caracteres que contenga solo 2 palabras separadas por un espacio.</string>
    <string name="dos_palabras_list2">2. Imprimiré una nueva cadena con las posiciones de la primera y segunda palabra intercambiadas (la segunda palabra se imprime primero).</string>
    <string name="solucionar">Solucionar</string>
    <string name="dos_mitades">Dos Mitades</string>
    <string name="quitar">Quitar fragmento</string>
    <string name="title_navbar">Iniciar sesión</string>

    <string name="button_ingresar">Ingresar</string>
    <string name="flecha_atras">Flecha atras</string>
    <string name="usuario">Usuario</string>
    <string name="contase_a">Contaseña</string>

    <!-- Texto del segundo fragemnto -->
    <string name="quitar_fragmento">Quitar fragmento</string>
    <string name="quitar_fragmentos">Quitar fragmentos</string>
    <string name="textodescripcionmitades">Te voy a ayudar a solucionar el problema de las 2 mitades.</string>
    <string name="listmitades1">1. Ingresa una cadena de caracteres.</string>
    <string name="MITADESLIST2">2. Te ayudare a cortar la cadena en dos partes iguales (si la longitud de la cadena es impar, colocare el carácter central en la primera cadena, de modo que la primera cadena contenga un carácter más que la segunda).</string>
    <string name="mitadlist3">3. Luego imprimiré la nueva cadena en una sola fila con la primera y la segunda mitad intercambiadas (la segunda mitad es la primera y la primera mitad es la segunda)</string>
</resources>