<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DosPalabras">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="407dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:background="#ffffff"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/textViewNavegacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="337dp"
                android:layout_marginBottom="20dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/textViewDosPalabrasProblema"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDosPalabrasProblema"
                android:layout_width="376dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="19dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/dos_palabras_des"
                android:textColor="#1B2E35"
                android:textSize="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textViewListaDosPalabras"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewListaDosPalabras"
                android:layout_width="352dp"
                android:layout_height="61dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="31dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/dos_palabras_list1"
                android:textColor="#1B2E35"
                android:textSize="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textViewListaDosPalabras2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewListaDosPalabras2"
                android:layout_width="353dp"
                android:layout_height="80dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/roboto"
                android:text="@string/dos_palabras_list2"
                android:textColor="#1B2E35"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewListaDosPalabras" />

            <EditText
                android:id="@+id/inputContraseña"
                android:layout_width="363dp"
                android:layout_height="54dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="17dp"
                android:autofillHints="contraseña"
                android:text="Ingrese"
                android:ems="10"
                android:paddingStart="25sp"
                android:paddingEnd="25sp"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonSolucionarDosPalabras"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewListaDosPalabras2" />

            <Button
                android:id="@+id/buttonSolucionarDosPalabras"
                style="@style/EstiloBotonPrincipal"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="134dp"
                android:layout_marginEnd="134dp"
                android:fontFamily="@font/roboto"
                android:text="@string/solucionar"
                android:textAllCaps="false"
                android:textColor="#1B2E35"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#5AE4A8"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewDosPalabras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="123dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:fontFamily="@font/roboto"
                android:text="@string/dos_palabras"
                android:textColor="#1B2E35"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="17dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="409dp"
            android:layout_height="92dp"
            android:layout_marginBottom="1dp"
            android:background="#5AE4A8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="63dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="63dp"
                android:src="@drawable/dos"
                app:layout_constraintEnd_toStartOf="@+id/imageView12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/mita"
                app:layout_constraintEnd_toStartOf="@+id/imageView13"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="63dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="63dp"
                android:src="@drawable/qui"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView12"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/dos_mitades"
                android:textColor="#1B2E35"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/dos_palabras"
                android:textColor="#1B2E35"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/quitar"
                android:textColor="#1B2E35"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>